Added line tracing in the scene and started to rework the Sprite rendering